Min CPU count 4 added (#4131)
* Min CPU count 4 added

* Import fixes.